--- a/Submissions Page/submissions.html
+++ b/Submissions Page/submissions.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Pixify</title>
-    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="./submissions.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,34 +30,7 @@
         <div id="left-container">
             <h1>2023 Submissions</h1>
             <div id="gallery-card-container">
-                <div class="gallery-card">
-                    <img class="gallery-image" src="">
-                    <div class="under-img-text">
-                     <p class="gallery-title"></p>
-                     <p class="see-more">see more</p>
-                    </div>
-                </div>
-                <div class="gallery-card">
-                    <img class="gallery-image" src="">
-                    <div class="under-img-text">
-                     <p class="gallery-title"></p>
-                     <p class="see-more">see more</p>
-                    </div>
-                </div>
-                <div class="gallery-card">
-                    <img class="gallery-image" src="">
-                    <div class="under-img-text">
-                     <p class="gallery-title"></p>
-                     <p class="see-more">see more</p>
-                    </div>
-                </div>
-                <div class="gallery-card">
-                    <img class="gallery-image" src="">
-                    <div class="under-img-text">
-                     <p class="gallery-title"></p>
-                     <p class="see-more">see more</p>
-                    </div>
-                </div>
+              
             </div>
         </div>
         <form id="submission-form">
@@ -65,11 +38,13 @@
             <input id="input-name" type="text" placeholder="Your Name">
             <input id="input-title" type="text" placeholder="Title of Your Entry">
             <input id="input-url1" type="text" placeholder="Image URL One">
-            <input id="input-url2" type="text" placeholder="Image URL Two>
+            <input id="input-url2" type="text" placeholder="Image URL Two">
             <input id="input-url3" type="text" placeholder="Image URL Three">
             <input id="input-url4" type="text" placeholder="Image URL Four">
             <input id="input-url5" type="text" placeholder="Image URL Five">
             <input type="submit">
         </form>
+     </main>
+     <script src="../script.js"></script>
 
-    </main>
+     </body>
