Submissions page and Javascript work

--- a/Submissions Page/submissions.html
+++ b/Submissions Page/submissions.html
@@ -34,15 +34,15 @@
             </div>
         </div>
         <form id="submission-form">
-            <p>SUBMIT YOUR WORK</p>
-            <input id="input-name" type="text" placeholder="Your Name">
-            <input id="input-title" type="text" placeholder="Title of Your Entry">
-            <input id="input-url1" type="text" placeholder="Image URL One">
-            <input id="input-url2" type="text" placeholder="Image URL Two">
-            <input id="input-url3" type="text" placeholder="Image URL Three">
-            <input id="input-url4" type="text" placeholder="Image URL Four">
-            <input id="input-url5" type="text" placeholder="Image URL Five">
-            <input type="submit">
+            <p id="form-title">SUBMIT YOUR WORK</p>
+            <input class="form-input" id="input-name" type="text" placeholder="Your Name">
+            <input class="form-input" id="input-title" type="text" placeholder="Title of Your Entry">
+            <input class="form-input" id="input-url1" type="text" placeholder="Image URL One">
+            <input class="form-input" id="input-url2" type="text" placeholder="Image URL Two">
+            <input class="form-input" id="input-url3" type="text" placeholder="Image URL Three">
+            <input class="form-input" id="input-url4" type="text" placeholder="Image URL Four">
+            <input class="form-input" id="input-url5" type="text" placeholder="Image URL Five">
+            <button id="input-submit"> Submit </button>
         </form>
      </main>
      <script src="../script.js"></script>
