--- a/Submissions Page/submissions.html
+++ b/Submissions Page/submissions.html
@@ -20,8 +20,8 @@
     <header>
         <div id="header-title">PIXIFY</div>
         <nav>
-            <a href="">2023 Submissions</a>
-            <a href="">About</a>
+            <a href="../Submissions Page/submissions.html">2023 Submissions</a>
+            <a href="../About Page/about.html">About</a>
             <button id="display-toggle">Dark Mode</button>
         </nav>
     </header>
