--- a/About Page/about.html
+++ b/About Page/about.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <div id="header-title">PIXIFY</div>
+        <a href="../Landing Page/landing.html" id="header-title">PIXIFY</a>
         <nav>
             <a href="../Submissions Page/submissions.html">2023 Submissions</a>
             <a href="../About Page/about.html">About</a>
@@ -28,7 +28,7 @@
 
     <main>
         <div id="top-text">
-            <h1>About Us</h1>
+            <h1>ABOUT US</h1>
             <p id="top-paragraph">Welcome to Pixify, the ultimate destination for photography enthusiasts! We are a community of passionate photographers who believe in the power of capturing life's moments and sharing them with the world.
             </p>
         </div>
@@ -47,5 +47,5 @@
         </div>
 
     </main>
-
+    <script src="about.js"></script>
 </body>
