--- a/Gallery Page/gallery.html
+++ b/Gallery Page/gallery.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>Pixify</title>
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./submissions.css">
+    <link rel="stylesheet" href="../reset.css">
+    <link rel="stylesheet" href="./gallery.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -18,10 +18,10 @@
 
 <body>
     <header>
-        <div id="header-title">PIXIFY</div>
+        <a href="../Landing Page/landing.html" id="header-title">PIXIFY</a>
         <nav>
-            <a href="">2023 Submissions</a>
-            <a href="">About</a>
+            <a href="../Submissions Page/submissions.html">2023 Submissions</a>
+            <a href="../About Page/about.html">About</a>
             <button id="display-toggle">Dark Mode</button>
         </nav>
     </header>
@@ -37,4 +37,4 @@
         </div>
     </main>
 
-    <script src="../script.js"></script>
+    <script src="gallery.js"></script>
