--- a/Submissions Page/submissions.html
+++ b/Submissions Page/submissions.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Pixify</title>
     <link rel="stylesheet" href="../reset.css">
-    <link rel="stylesheet" href="./submissions.css">
+    <link rel="stylesheet" href="../Submissions Page/submissions.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <div id="header-title">PIXIFY</div>
+        <a href="../Landing Page/landing.html" id="header-title">PIXIFY</a>
         <nav>
             <a href="../Submissions Page/submissions.html">2023 Submissions</a>
             <a href="../About Page/about.html">About</a>
