--- a/Landing Page/landing.html
+++ b/Landing Page/landing.html
@@ -18,10 +18,10 @@
 
 <body>
     <header>
-        <div id="header-title">PIXIFY</div>
+        <a href="../Landing Page/landing.html" id="header-title">PIXIFY</a>
         <nav>
             <a href="../Submissions Page/submissions.html">2023 Submissions</a>
-            <a href="">About</a>
+            <a href="../About Page/about.html">About</a>
         </nav>
     </header>
    <main>
@@ -32,7 +32,7 @@
       </p>
     </div>
       <!--Change to Link!!!!-->
-      <button id="submit-button">SUBMIT NOW</button>
+      <a href="../Submissions Page/submissions.html" id="submit-button">SUBMIT NOW</a>
      </div>
     </main>
    </main>
